# gelly

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .luarc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  addon.json  stylua.toml
modules/gelly-binary-module/: CMakeLists.txt
modules/gelly-binary-module/cmake/: CopyFleXDLLs.cmake  PreprocessShaders.cmake
modules/gelly-binary-module/src/: Gelly.cpp  Gelly.h  TextureOverride.cpp  TextureOverride.h  main.cpp
modules/gelly-binary-module/src/compositor/: Compositor.cpp  Compositor.h  PassResources.h
modules/gelly-binary-module/src/compositor/passes/: Composite.cpp  Composite.h  Pass.cpp  Pass.h
modules/gelly-binary-module/src/d3d9/: D3D9Shader.cpp  D3D9Shader.h  ErrorHandling.h
modules/gelly-binary-module/src/d3d9/shaders/: CompositePS.hlsl
modules/gelly-binary-module/src/engine/: GellyEngineGMod.cpp  GellyEngineGMod.h
modules/gelly-binary-module/src/hooking/: Library.cpp  Library.h  VTable.cpp  VTable.h
modules/gelly-binary-module/src/source/: CShaderAPIDX8.cpp  CShaderAPIDX8.h  CTexture.cpp  CTexture.h  CViewSetup.h  D3DDeviceWrapper.cpp  D3DDeviceWrapper.h  IBaseClientDLL.cpp  IBaseClientDLL.h  IMaterialSystem.cpp  IMaterialSystem.h  IRenderView.cpp  IRenderView.h  IVRenderView.cpp  IVRenderView.h  Interface.h  MathTypes.h
modules/gelly-d3d/: CMakeLists.txt
modules/gelly-d3d/include/: GellyD3D.h
modules/gelly-d3d/include/detail/d3d11/: Buffer.h  Cleanup.h  ComputeProgram.h  ConstantBuffer.h  ErrorHandling.h  SRVBuffer.h  Shaders.h  (+3 more)
modules/gelly-d3d/src/d3d11/: Cleanup.cpp  ComputeProgram.cpp  Shaders.cpp  Texture.cpp
modules/gelly-d3d/src/d3d9/: DXMathInterop.cpp  ShaderConstants.cpp  Texture.cpp
modules/gelly-engine/: CMakeLists.txt
modules/gelly-engine/include/: GellyEngine.h  GellyScene.h  Scene.h  engine.h
modules/gelly-engine/src/: Colliders.cpp  GellyEngine.cpp  GellyScene.cpp  MeshConvert.cpp  MeshConvert.h  Scene.h  engine.cpp
modules/gelly-engine/test/: main.cpp
modules/gelly-fluid-renderer/: CMakeLists.txt
modules/gelly-fluid-renderer/cmake/: CompileShaders.cmake
modules/gelly-fluid-renderer/include/: GellyFluidRender.h
modules/gelly-fluid-renderer/include/fluidrender/: CD3D11DebugFluidRenderer.h  CD3D11DebugFluidTextures.h  CD3D11ManagedBuffer.h  CD3D11ManagedBufferLayout.h  CD3D11ManagedDepthBuffer.h  CD3D11ManagedShader.h  CD3D11ManagedTexture.h  CD3D11RenderContext.h  CD3D11to11SharedTexture.h  IFluidRenderer.h  IFluidTextures.h  IManagedBuffer.h  IManagedBufferLayout.h  IManagedDepthBuffer.h  IManagedShader.h  IManagedTexture.h  IRenderContext.h  ISharedTexture.h
modules/gelly-fluid-renderer/src/: GellyFluidRender.cpp
modules/gelly-fluid-renderer/src/fluidrender/: CD3D11DebugFluidRenderer.cpp  CD3D11DebugFluidTextures.cpp  CD3D11ManagedBuffer.cpp  CD3D11ManagedBufferLayout.cpp  CD3D11ManagedDepthBuffer.cpp  CD3D11ManagedShader.cpp  CD3D11ManagedTexture.cpp  CD3D11RenderContext.cpp  CD3D11to11SharedTexture.cpp
modules/gelly-fluid-renderer/src/shaders/: EstimateNormal.ps50.hlsl  FilterDepth.ps50.hlsl  FilterDepth.vs50.hlsl  FilterThickness.ps50.hlsl  FluidRenderCBuffer.hlsli  ScreenQuad.vs50.hlsl  ScreenQuadStructs.hlsli  Splatting.gs50.hlsl  Splatting.ps50.hlsl  SplattingStructs.hlsli  TestShader.ps50.hlsl  Thickness.gs50.hlsl  Thickness.ps50.hlsl  ThicknessStructs.hlsli
modules/gelly-fluid-sim/: CMakeLists.txt
modules/gelly-fluid-sim/include/: GellyFluid.h  GellyFluidSim.h
modules/gelly-fluid-sim/include/detail/: MathPOD.h  PBFSolver.h  SolverContext.h
modules/gelly-fluid-sim/include/fluidsim/: CD3D11CPUSimData.h  CD3D11DebugFluidSimulation.h  CD3D11FlexFluidSImulation.h  CD3D11RTFRFluidSimulation.h  CD3D11SimContext.h  CFlexSimScene.h  CSimpleSimCommandList.cpp  CSimpleSimCommandList.h  IFluidSimulation.h  ISimCommandList.h  ISimContext.h  ISimData.h  ISimScene.h
modules/gelly-fluid-sim/src/: GellyFluidSim.cpp  PBFSolver.cpp  SolverContext.cpp
modules/gelly-fluid-sim/src/fluidsim/: CD3D11CPUSimData.cpp  CD3D11DebugFluidSimulation.cpp  CD3D11FlexFluidSimulation.cpp  CD3D11RTFRFluidSimulation.cpp  CD3D11SimContext.cpp  CFlexSImScene.cpp
modules/gelly-fluid-sim/test/: CMakeLists.txt
modules/gelly-fluid-sim/test/src/: main.cpp
modules/gelly-renderer/: CMakeLists.txt
modules/gelly-renderer/cmake/: PreprocessShaders.cmake
modules/gelly-renderer/include/: GellyRenderer.h
modules/gelly-renderer/include/detail/: Camera.h  ConstantBuffer.h  DataTypes.h  ErrorHandling.h  GBuffer.h  Shader.h
modules/gelly-renderer/src/: Camera.cpp  ErrorHandling.h  GellyRenderer.cpp  Shader.cpp  Shader.h
modules/gelly-renderer/src/rendering/: SSTechnique.cpp  SSTechnique.h  Technique.h
modules/gelly-renderer/src/shaders/: Gelly.sprj  ParticleSplatPS.hlsl  ParticleSplatVS.hlsl  README.md
modules/gelly-renderer/test/: CMakeLists.txt
modules/gelly-renderer/test/src/: BasicD3D9Renderer.cpp  BasicD3D9Renderer.h  ErrorHandling.h  main.cpp
testbed/: CMakeLists.txt
testbed/assets/scenes/: 01_gelly_springs.gltf  02_gelly_funnel.gltf  03_gelly_sandbox.gltf  04_gelly_bowl.gltf  SM_Deccer_Cubes.gltf
testbed/cmake/: CompileShaders.cmake
testbed/src/: CConsoleLogger.cpp  CConsoleLogger.h  Camera.cpp  Camera.h  D3D11DebugLayer.cpp  Gelly.cpp  Gelly.h  ILogger.h  Logging.cpp  Logging.h  Memory.cpp  Memory.h  Rendering.cpp  Rendering.h  SSFX.cpp  SSFX.h  Scene.cpp  Scene.h  Shaders.cpp  Shaders.h  Textures.cpp  Textures.h  Window.cpp  Window.h  main.cpp
testbed/src/shaders/: CompositeSSFX.ps50.hlsl  GenericLitWorld.hlsli  GenericLitWorld.ps50.hlsl  GenericLitWorld.vs.hlsl  GenericLitWorld.vs50.hlsl  NDCQuad.vs50.hlsl  ShadingSSFX.ps50.hlsl  ShadingSSFXCBuffer.hlsli  ShadingWaterSSFX.ps50.hlsl  TestSSFX.ps50.hlsl  WorldRenderCBuffer.hlsli
testbed/src/shaders/lights/: PointLight.hlsli
testbed/src/shaders/math/: BeersLaw.hlsli
testbed/src/ssfx/: Composite.cpp  Shading.cpp  Shading.h  ShadingWater.cpp  ShadingWater.h  TestSSFX.cpp  TestSSFX.h
testbed/src/ui/: ChangeSimWindow.cpp  ChangeSimWindow.h  TestbedWindow.cpp  TestbedWindow.h  UIData.h
(+143 files in other folders)
